--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -25,6 +25,7 @@
                             <Label Content="Use cases :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="usecaseFilePath" Content="Aucun fichier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
+                        <Button Content="Button" Width="75" Click="Button_Click"/>
                     </DockPanel>
                 </DockPanel>
             </TabItem>
