--- a/AGL/App.xaml
+++ b/AGL/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="AGL.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="LoadProject.xaml">
+             StartupUri="StartUpWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
