--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -4,13 +4,13 @@
         Title="AGL Seattle" Height="350" Width="525">
     <Grid>
         <TabControl Margin="0">
-            <TabItem Header="Spécifications" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="Auto">
+            <TabItem Header="Spécifications" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="Auto" Margin="0,0,-0.333,0">
                 <DockPanel>
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
                         <Button Name="validatePasserelleA"  Content="Valider"  Margin="5" Click="validatePasserelleA_Click" DockPanel.Dock="Bottom" />
                     </DockPanel>
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
-                        <Button Name="loadBesoinsButton"  Content="Créer / modifier exigences (.csv)"  HorizontalAlignment="Left" Margin="5" Click="loadBesoins_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadBesoinsButton"  Content="Créer / modifier besoins (.csv)"  HorizontalAlignment="Left" Margin="5" Click="loadBesoins_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="Besoins :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="besoinsFilePath" Content="Aucun fichier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
@@ -21,7 +21,6 @@
                             <Label Content="Use cases :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="usecaseFilePath" Content="Aucun fichier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
-                        <Button Content="Button" Width="75" Click="Button_Click"/>
                     </DockPanel>
                 </DockPanel>
             </TabItem>
@@ -38,9 +37,9 @@
                             <Label Name="mcdFilePath" Content="Aucun fichier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
 
-                        <Button Name="loadGeneratedXMIButton"  Content="Charger diagramme de classe" HorizontalAlignment="Left" Margin="5" Click="loadXMI_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadGeneratedXMIButton"  Content="Charger diagramme de classe (.xmi)" HorizontalAlignment="Left" Margin="5" Click="loadXMI_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
-                            <Label Content="XMI généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Content="Diagramme de classe :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="xmiFilePath" Content="Aucun fichier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
                        
