--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -54,7 +54,7 @@
                     </DockPanel>
 
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
-                        <Button Name="loadGeneratedJavaButton"  Content="Selectionner dossier du code Java"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadGeneratedJavaButton"  Content="Modifier le code Java"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="Java généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="generatedJavaFilePath" Content="Aucun dossier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
