--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -34,13 +34,13 @@
                     </DockPanel>
 
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
-                        <Button Name="loadMCDButton"  Content="Charger MCD (.xml)" HorizontalAlignment="Left" Margin="5" Click="loadMCD_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadMCDButton"  Content="Créer / modifier MCD (.xml)" HorizontalAlignment="Left" Margin="5" Click="loadMCD_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="MCD :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="mcdFilePath" Content="Aucun fichier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
 
-                        <Button Name="loadGeneratedXMIButton"  Content="Charger diagramme de classe (.xmi)" HorizontalAlignment="Left" Margin="5" Click="loadXMI_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadGeneratedXMIButton"  Content="Créer / modifier diagramme de classe (.xmi)" HorizontalAlignment="Left" Margin="5" Click="loadXMI_Click" DockPanel.Dock="Top" Width="240"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="Diagramme de classe :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="xmiFilePath" Content="Aucun fichier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
