--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AGL.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AGL Seattle" Height="350" Width="525">
+        Title="AGL Seattle" Height="350" Width="525" WindowStartupLocation="CenterScreen">
     <Grid>
         <TabControl Name="tab" Margin="0">
             <TabItem Header="Spécifications" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="Auto" Margin="0,0,-0.333,0">
