--- a/AGL/PasswordPopup.xaml
+++ b/AGL/PasswordPopup.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AGL.PasswordPopup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PasswordPopup" Height="150" Width="300">
+        Title="Password" Height="150" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
         <DockPanel>
             <DockPanel LastChildFill="False" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
@@ -11,8 +11,8 @@
                 <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top">
                     <Label Content="Veuillez entrer votre mot de passe root pour MySQL" VerticalAlignment="Center" Margin="0,0,0,0"/>
                 </DockPanel>
-                <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top">
-                    <PasswordBox Name="passbox"  HorizontalAlignment="Left" Margin="5" DockPanel.Dock="Top" Width="200"/>
+                <DockPanel LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top">
+                    <PasswordBox Name="passbox" Margin="5" DockPanel.Dock="Top" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </DockPanel>
             </DockPanel>
         </DockPanel>
