--- a/AGL/StartUpWindow.xaml
+++ b/AGL/StartUpWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AGL.StartUpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="StartUpWindow" Height="110" Width="200">
+        Title="StartUpWindow" Height="110" Width="200" WindowStartupLocation="CenterScreen">
     <Grid>
         <DockPanel LastChildFill="False" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center" >
             <Label Content="Créer un nouveau projet?" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Top" VerticalAlignment="Center" />
