--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -57,10 +57,15 @@
                     </DockPanel>
 
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
-                        <Button Name="loadGeneratedJavaButton"  Content="Modifier le code Java"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
+                        <Button Name="loadGeneratedJavaButton"  Content="Générer les DAO"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="Java généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
                             <Label Name="generatedJavaFilePath" Content="Aucun dossier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                        </DockPanel>
+                        <Button Name="loadGeneratedJavaButton2"  Content="Modifier le code métier"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
+                        <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
+                            <Label Content="Java généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Name="generatedJavaFilePath2" Content="Aucun dossier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
                     </DockPanel>
                 </DockPanel>
