--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -8,7 +8,7 @@
                 <DockPanel>
                     <DockPanel LastChildFill="False" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
                         <Button Name="validatePasserelleA"  Content="Valider"  Margin="5" Click="validatePasserelleA_Click" DockPanel.Dock="Bottom" />
-                        <Label Name="validationNeeded" Content="Des modification ont été apportées, veuillez valider avant de pouvoir continuer." HorizontalAlignment="Center" VerticalAlignment="Center" DockPanel.Dock="Bottom" Foreground="Red"/>
+                        <Label Name="validationNeededA" Content="Des modification ont été apportées, veuillez valider avant de pouvoir continuer." HorizontalAlignment="Center" VerticalAlignment="Center" DockPanel.Dock="Bottom" Foreground="Red"/>
                     </DockPanel>
                     <DockPanel LastChildFill="False" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
                         <Button Name="loadBesoinsButton"  Content="Créer / modifier besoins (.csv)"  HorizontalAlignment="Left" Margin="5" Click="loadBesoins_Click" DockPanel.Dock="Top" Width="200"/>
@@ -31,6 +31,7 @@
                 <DockPanel>
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
                         <Button Name="validatePasserelleB"  Content="Valider"  Margin="5" Click="validatePasserelleB_Click" DockPanel.Dock="Bottom" />
+                        <Label Name="validationNeededB" Content="Des modification ont été apportées, veuillez valider avant de pouvoir continuer." HorizontalAlignment="Center" VerticalAlignment="Center" DockPanel.Dock="Bottom" Foreground="Red"/>
                     </DockPanel>
 
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
