--- a/AGL/PasswordPopup.xaml
+++ b/AGL/PasswordPopup.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="AGL.PasswordPopup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Password" Height="150" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Password" Height="150" Width="336.17" WindowStartupLocation="CenterScreen">
     <Grid>
         <DockPanel>
             <DockPanel LastChildFill="False" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
                 <Button Name="validatePasserelleA"  Content="Valider"  Margin="5" Click="validatePassword_Click" DockPanel.Dock="Bottom" />
             </DockPanel>
             <DockPanel LastChildFill="False" DockPanel.Dock="Left" Margin="0,10,0,0"  >
-                <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top">
-                    <Label Content="Veuillez entrer votre mot de passe root pour MySQL" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                <DockPanel LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top">
+                    <Label Content="Veuillez entrer votre mot de passe root pour MySQL" VerticalAlignment="Center" Margin="0,0,0,0" HorizontalAlignment="Center"/>
                 </DockPanel>
                 <DockPanel LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top">
                     <PasswordBox Name="passbox" Margin="5" DockPanel.Dock="Top" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center"/>
