--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -44,7 +44,7 @@
                         <Button Name="loadGeneratedXMIButton"  Content="Créer / modifier diagramme de classe (.xmi)" HorizontalAlignment="Left" Margin="5" Click="loadXMI_Click" DockPanel.Dock="Top" Width="240"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
                             <Label Content="Diagramme de classe :" VerticalAlignment="Center" Margin="0,0,0,0"/>
-                            <Label Name="xmiFilePath" Content="Aucun fichier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Name="xmiFilePath" Content="Aucun fichier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
 
                     </DockPanel>
@@ -60,13 +60,13 @@
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
                         <Button Name="loadGeneratedJavaButton"  Content="Générer les DAO"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="200"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
-                            <Label Content="Java généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
-                            <Label Name="generatedJavaFilePath" Content="Aucun dossier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Content="DAO généré(s) :" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Name="generatedJavaFilePath" Content="Aucun dossier trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
-                        <Button Name="loadGeneratedJavaButton2"  Content="Modifier le code métier et générer les tests"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click" DockPanel.Dock="Top" Width="250"/>
+                        <Button Name="loadGeneratedJavaButton2"  Content="Modifier le code métier et générer les tests"  HorizontalAlignment="Left" Margin="5" Click="loadgeneratedJava_Click2" DockPanel.Dock="Top" Width="250"/>
                         <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" >
-                            <Label Content="Java généré :" VerticalAlignment="Center" Margin="0,0,0,0"/>
-                            <Label Name="generatedJavaFilePath2" Content="Aucun dossier selectionné" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Content="Code Java du projet :" VerticalAlignment="Center" Margin="0,0,0,0"/>
+                            <Label Name="generatedJavaFilePath2" Content="Aucun code trouvé" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         </DockPanel>
                     </DockPanel>
                 </DockPanel>
