--- a/AGL/MainWindow.xaml
+++ b/AGL/MainWindow.xaml
@@ -54,7 +54,8 @@
             <TabItem Header="Réalisation et tests" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="Auto">
                 <DockPanel>
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
-                        <Button Name="validatePasserelleC"  Content="Valider"  Margin="5" Click="validatePasserelleB_Click" DockPanel.Dock="Bottom" />
+                        <Button Name="validatePasserelleC"  Content="Valider"  Margin="5" Click="validatePasserelleC_Click" DockPanel.Dock="Bottom" />
+                        <Label Name="validationNeededC" Content="Des modification ont été apportées, veuillez valider avant de pouvoir continuer." HorizontalAlignment="Center" VerticalAlignment="Center" DockPanel.Dock="Bottom" Foreground="Red"/>
                     </DockPanel>
 
                     <DockPanel LastChildFill="False" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Bottom" Margin="0,10,0,0"  >
