--- a/AGL/PasswordPopup.xaml
+++ b/AGL/PasswordPopup.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="AGL.PasswordPopup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Password" Height="150" Width="336.17" WindowStartupLocation="CenterScreen">
+        Title="Password" Height="150" Width="336.17" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Grid>
         <DockPanel>
             <DockPanel LastChildFill="False" DockPanel.Dock="Bottom" Margin="0,10,0,0" >
-                <Button Name="validatePasserelleA"  Content="Valider"  Margin="5" Click="validatePassword_Click" DockPanel.Dock="Bottom" />
+                <Button Name="validatePasserelleA"  Content="Valider"  Margin="5" Click="validatePassword_Click" DockPanel.Dock="Bottom" ToolTip="Valider votre mot de passe root MySQL afin de procéder à la création automatique de la base de données modélisée par le MCD." />
             </DockPanel>
             <DockPanel LastChildFill="False" DockPanel.Dock="Left" Margin="0,10,0,0"  >
                 <DockPanel LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center" DockPanel.Dock="Top">
