--- a/AGL/StartUpWindow.xaml
+++ b/AGL/StartUpWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<Window x:Class="AGL.StartUpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="StartUpWindow" Height="110" Width="200" WindowStartupLocation="CenterScreen">
+        Title="Démarrage" Height="140" Width="260" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
     <Grid>
         <DockPanel LastChildFill="False" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center" >
             <Label Content="Créer un nouveau projet?" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Top" VerticalAlignment="Center" />
             <DockPanel LastChildFill="False" VerticalAlignment="Center" DockPanel.Dock="Bottom" Margin="0,0,0,0" HorizontalAlignment="Center" >
-                <Button Name="createNewProjetButton"  Content="Oui"  Margin="5" Click="yes_Click" DockPanel.Dock="Left" Width="70" VerticalAlignment="Center"/>
-                <Button Name="NoButton"  Content="Non"  Margin="5" Click="no_Click" DockPanel.Dock="Left" Width="70"  VerticalAlignment="Center"/>
+                <Button Name="createNewProjetButton"  Content="Oui"  Margin="5" Click="yes_Click" DockPanel.Dock="Left" Width="70" VerticalAlignment="Center" ToolTip="Lancer NetBeans pour créer un nouveau projet Java."/>
+                <Button Name="NoButton"  Content="Non"  Margin="5" Click="no_Click" DockPanel.Dock="Left" Width="70"  VerticalAlignment="Center" ToolTip="Passer à l'étape suivante pour sélectionner le projet sur lequel travailler."/>
 
             </DockPanel>
         </DockPanel>
